2002-10-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/utility.h: op_ratio() new
	* pp/op_time.cpp:
	* pp/op_to_source.cpp:
	* pp/opp_symbol.cpp:
	* pp/samples_container.cpp: use op_ratio()

2002-10-11  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.cpp:
	* libutil++/filename_match.cpp:
	* libutil++/string_manip.cpp:
	* libutil++/string_manip.h: fix dirname(), basename(), remove rtrim()

2002-10-07  John Levon  <levon@movementarian.org>

	* daemon/opd_image.h:
	* daemon/opd_image.c:
	* daemon/oprofiled.c:
	* libop/op_interface_25.h: update to latest interface

2002-10-06  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_image.c: allow to free(image->app_name)

2002-10-05  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c:
	* dae/opd_image.c: spacing

	* dae/opd_mapping.c:
	* dae/opd_mapping.h: kill op_grow_maps() simplify adding map path
	* dae/opd_parse_proc.c: use opd_add_mapping()

2002-10-05  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/oprofile.xml: more doc in interpreting results

2002-10-04  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opp_symbols.cpp:
	* pp/opp_symbols.h:
	* pp/outsymbflag.h: implement 'q' 'Q' format flags. Fix #618165
	* pp/op_time_options.cpp: reject these formats for op_time
	* doc/oprofile.1.in:
	* doc/oprofile.xml: document them

2002-10-02  John Levon  <levon@movementarian.org>

	* Makefile.in: use -P to strip dead dirs on dist
 
	* dae/opd_parse_proc.c: spacing

2002-10-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db-*.c/*.h: typedef tweaking for 64 bits arch (signaled
	  by Dave Jones)

	* remove libdb/ChangeLog, old entries are:

	2002-04-20  Philippe Elie  <phil.el@wanadoo.fr>
	* db-insert.c: check for count overflow

	2002-04-20  Philippe Elie  <phil.el@wanadoo.fr>
	* db-manage.c: properly handle already existing db file
	* db.h: extern "C" wrapper

	2002-04-19  Philippe Elie  <phil.el@wanadoo.fr>
	* *.c;*.h: make plugin db in oprofile more easy.
