@@ -122,7 +122,6 @@ void opd_handle_old_sample_files(struct opd_image const * image)
  * image->kernel and image->name must have meaningful
  * values.
  */
-// FIXME: take db_tree_t * instead
 void opd_open_sample_file(struct opd_image * image, int counter)
 {
 	char * mangled;
